--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      #- name: asciidoctor-ghpages
-        # uses: manoelcampos/asciidoctor-ghpages-action@v2
-        # with:
-          # pdf_build: false
-          # asciidoctor_params: --attribute=nofooter
+      - name: asciidoctor-ghpages
+        uses: manoelcampos/asciidoctor-ghpages-action@v2
+        with:
+          pdf_build: false
+          asciidoctor_params: --attribute=nofooter
 
