--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write
+      # pull-requests: write
+      repository-projects: write
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
