--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,9 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     permissions: 
-      contents: read
+      contents: write
       pull-requests: write
+      pages: write
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -35,5 +36,4 @@ jobs:
         uses: manoelcampos/asciidoctor-ghpages-action@v2
         with:
           pdf_build: false
-          asciidoctor_params: --attribute=nofooter  
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          asciidoctor_params: --attribute=nofooter
