--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -1,10 +1,7 @@
-extends: default
-  role:
-    red: 
-      font-color: #c5000c
-    maroon:
-      font-color: #4f2400
-    green:
-      font-color: #366251
-    navy:
-      font-color: #4974a5
+extends: base
+base:
+  font-color: #333333
+  font-family: Times-Roman
+  font-size: 12
+  line-height-length: 17
+  line-height: $base-line-height-length / $base-font-size
