--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -1,7 +1,7 @@
 extends: base
 base:
   font-color: #333333
-  font-family: Times-Roman
+  font-family: Vendana
   font-size: 12
   line-height-length: 17
   line-height: $base-line-height-length / $base-font-size
