fix font themes

--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -3,10 +3,11 @@ extends: base
 
 font:
   catalog:
+    merge: false
     Trade Gothic:
-      normal: TradeGothic.ttf
-      bold: TradeGothic-BoldCondTwenty.ttf
-      light: TradeGothic-Light.ttf
+      normal: GEM_FONTS_DIR/TradeGothic.ttf
+      bold: GEM_FONTS_DIR/TradeGothic-BoldCondTwenty.ttf
+      light: GEM_FONTS_DIR/TradeGothic-Light.ttf
 
 base:
   font-family: Trade Gothic
