--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -1,8 +1,7 @@
 extends: base
-
 base:
-    font-color: #009933
-
-heading:
-    font-style: bold
-    font-color: #009933
+  font-color: #009933
+  font-family: Vendana
+  font-size: 12
+  line-height-length: 17
+  line-height: $base-line-height-length / $base-font-size
