--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -5,3 +5,7 @@ base:
   font-size: 12
   line-height-length: 17
   line-height: $base-line-height-length / $base-font-size
+  
+heading:
+   font-color: #009933
+   font-size: 20
