Actual Pdf-Style status ok

--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -1,4 +1,13 @@
 extends: base
+
+font:
+  catalog:
+    merge: false
+    Trade Gothic:
+      normal: tradegothic-normal.ttf
+      bold: tradegothic-bold.ttf
+      light: tradegothic-light.ttf
+
 base:
   font-color: #0000ff
   font-family: Times-Roman
