--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -10,8 +10,14 @@ font:
       italic: tradegothic-Italic.ttf
 
 base:
-  font-color: #0000ff
+  font-color: #000000
   font-family: Trade Gothic
-  font-size: 20
-  line-height-length: 17
-  line-height: $base-line-height-length / $base-font-size
+  font-size: 12
+  # line-height-length: 17
+  # line-height: $base-line-height-length / $base-font-size
+  
+  heading:
+    font-familiy: Trade Gothic
+    font-style: bold
+    font-size: 18
+    
