--- a/themes/pdf-theme.yml
+++ b/themes/pdf-theme.yml
@@ -16,8 +16,10 @@ base:
   # line-height-length: 17
   # line-height: $base-line-height-length / $base-font-size
   
-  heading:
-    font-familiy: Trade Gothic
-    font-style: bold
-    font-size: 18
-    
+heading:
+  font-familiy: Trade Gothic
+  font-style: bold
+  font-size: 18
+
+page:
+  margin: [2.35cm, 1.4cm, 2.4cm, 2.5cm]
